--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "start": "yarn ts-node-dev ./src/index.ts",
     "postinstall": "tsc",
     "production": "node ./build/index.js",
+    "knex:rollback-all": "knex --knexfile ./src/server/database/knex/Environment.ts migrate:rollback --all", 
+    "knex:rollback": "knex --knexfile ./src/server/database/knex/Environment.ts migrate:rollback", 
+    "knex:migrate": "knex --knexfile ./src/server/database/knex/Environment.ts migrate:latest", 
+    "knex:seed": "knex --knexfile ./src/server/database/knex/Environment.ts seed:run", 
+    
     "test": "jest"
   },
   "dependencies": {
@@ -27,7 +32,7 @@
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^5.61.0",
     "eslint": "^8.44.0",
-    "sqlite": "^5.0.1",
+    "sqlite3": "^5.1.6",
     "supertest": "^6.3.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.6"
