--- a/package.json
+++ b/package.json
@@ -9,30 +9,32 @@
     "start": "yarn ts-node-dev ./src/index.ts",
     "postinstall": "tsc",
     "production": "node ./build/index.js",
-    "knex:rollback-all": "knex --knexfile ./src/server/database/knex/Environment.ts migrate:rollback --all", 
-    "knex:rollback": "knex --knexfile ./src/server/database/knex/Environment.ts migrate:rollback", 
-    "knex:migrate": "knex --knexfile ./src/server/database/knex/Environment.ts migrate:latest", 
-    "knex:seed": "knex --knexfile ./src/server/database/knex/Environment.ts seed:run", 
+    "knex:rollback-all": "knex --knexfile ./src/server/database/knex/Environment.ts migrate:rollback --all",
+    "knex:rollback": "knex --knexfile ./src/server/database/knex/Environment.ts migrate:rollback",
+    "knex:migrate": "knex --knexfile ./src/server/database/knex/Environment.ts migrate:latest",
+    "knex:seed": "knex --knexfile ./src/server/database/knex/Environment.ts seed:run",
     "test": "jest"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http-status-codes": "^2.2.0",
     "knex": "^2.5.1",
-    "yup": "^1.2.0",
-    "sqlite3": "^5.1.6"
+    "sqlite3": "^5.1.6",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.3",
-    "jest": "^29.6.1",
-    "ts-jest": "^29.1.1",
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.3",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^5.61.0",
     "eslint": "^8.44.0",
+    "jest": "^29.6.1",
     "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.6"
   },
